--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Simple VR PC Builder - Physics Edition</title>
+    <title>Simple VR PC Builder - Improved Experience</title>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://unpkg.com/super-hands@3.0.4/dist/super-hands.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
@@ -31,7 +31,7 @@
             <img id="sky" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
 
             <a-mixin id="interactive"
-                     hoverable grabbable draggable
+                     hoverable grabbable draggable respawnable
                      dynamic-body>
             </a-mixin>
 
@@ -49,38 +49,38 @@
         <a-sky src="#sky"></a-sky>
         <a-plane id="ground-plane" src="#ground" rotation="-90 0 0" width="20" height="20" static-body></a-plane>
 
-        <a-box id="table" position="0 0.5 -1.5" width="4" height="0.1" depth="2" color="#8B4513" static-body></a-box>
+        <a-box id="table" position="0 0.5 -1.2" width="4" height="0.1" depth="2" color="#8B4513" static-body></a-box>
         
-        <a-entity id="pc-case" position="-1 0.6 -1.5">
+        <a-entity id="pc-case" position="-1 0.6 -1.2">
             <a-box position="0 0 0" width="0.4" height="0.02" depth="0.5" color="#2a2a2a" static-body></a-box>
             <a-box position="-0.19 0.2 0" width="0.02" height="0.4" depth="0.5" color="#2a2a2a" static-body></a-box>
             <a-box position="0 0.2 -0.24" width="0.4" height="0.4" depth="0.02" color="#2a2a2a" static-body></a-box>
             <a-box position="0 0.2 0.24" width="0.4" height="0.4" depth="0.02" color="#2a2a2a" static-body></a-box>
         </a-entity>
 
-        <a-box id="motherboard" mixin="interactive" position="1 0.7 -1.5" width="0.3" height="0.02" depth="0.35" color="#1a5f1a">
+        <a-box id="motherboard" mixin="interactive" position="1 0.7 -1.2" width="0.3" height="0.02" depth="0.35" color="#1a5f1a">
             <a-text value="Motherboard" position="0 0.02 0" align="center" scale="0.3 0.3 0.3"></a-text>
         </a-box>
-        <a-box id="cpu" mixin="interactive" position="1.5 0.7 -1.5" width="0.08" height="0.02" depth="0.08" color="#4a4a4a">
+        <a-box id="cpu" mixin="interactive" position="1.5 0.7 -1.2" width="0.08" height="0.02" depth="0.08" color="#4a4a4a">
             <a-text value="CPU" position="0 0.02 0" align="center" scale="0.2 0.2 0.2"></a-text>
         </a-box>
-        <a-box id="ram" mixin="interactive" position="1 0.7 -1.0" width="0.12" height="0.02" depth="0.03" color="#2a7a2a">
+        <a-box id="ram" mixin="interactive" position="1 0.7 -0.7" width="0.12" height="0.02" depth="0.03" color="#2a7a2a">
             <a-text value="RAM" position="0 0.02 0" align="center" scale="0.2 0.2 0.2"></a-text>
         </a-box>
-        <a-box id="gpu" mixin="interactive" position="1.5 0.7 -1.0" width="0.25" height="0.03" depth="0.15" color="#3a3a8a">
+        <a-box id="gpu" mixin="interactive" position="1.5 0.7 -0.7" width="0.25" height="0.03" depth="0.15" color="#3a3a8a">
             <a-text value="GPU" position="0 0.02 0" align="center" scale="0.25 0.25 0.25"></a-text>
         </a-box>
-        <a-box id="psu" mixin="interactive" position="1 0.7 -2.0" width="0.15" height="0.08" depth="0.15" color="#5a5a5a">
+        <a-box id="psu" mixin="interactive" position="1 0.7 -1.7" width="0.15" height="0.08" depth="0.15" color="#5a5a5a">
             <a-text value="PSU" position="0 0.05 0" align="center" scale="0.2 0.2 0.2"></a-text>
         </a-box>
-        <a-box id="ssd" mixin="interactive" position="1.5 0.7 -2.0" width="0.1" height="0.01" depth="0.07" color="#7a7a7a">
+        <a-box id="ssd" mixin="interactive" position="1.5 0.7 -1.7" width="0.1" height="0.01" depth="0.07" color="#7a7a7a">
             <a-text value="SSD" position="0 0.01 0" align="center" scale="0.15 0.15 0.15"></a-text>
         </a-box>
 
         <a-light type="ambient" color="#404040"></a-light>
         <a-light type="directional" position="0 5 0" rotation="-90 0 0" intensity="0.6"></a-light>
 
-        <a-entity id="rig" position="0 0 0" movement-controls="speed: 0.15; controls: left" thumbstick-turn="hand: right">
+        <a-entity id="rig" position="0 0 0" movement-controls="speed: 0.3; controls: left" thumbstick-turn="hand: right">
             <a-camera id="camera" position="0 1.6 0" look-controls wasd-controls>
                 <a-cursor id="cursor" raycaster="objects: [mixin='interactive']"></a-cursor>
             </a-camera>
@@ -90,6 +90,32 @@
         </a-entity>
 
         <script>
+            // NEW COMPONENT: Respawns an entity if it falls through the floor
+            AFRAME.registerComponent('respawnable', {
+              init: function () {
+                this.initialPosition = this.el.object3D.position.clone();
+              },
+              tick: function () {
+                const el = this.el;
+                const currentPosition = el.object3D.position;
+                // Respawn if it falls below the world and is not being held
+                if (currentPosition.y < 0 && !el.is('grabbed')) {
+                  console.log('Respawning ' + el.id);
+                  this.resetEntity();
+                }
+              },
+              resetEntity: function() {
+                const el = this.el;
+                el.object3D.position.copy(this.initialPosition);
+                // Also reset the physics body to stop all movement
+                if (el.body) {
+                  el.body.position.copy(this.initialPosition);
+                  el.body.velocity.set(0, 0, 0);
+                  el.body.angularVelocity.set(0, 0, 0);
+                }
+              }
+            });
+
             // From super-hands docs: prevents hands from knocking things away before grabbing
             AFRAME.registerComponent('phase-shift', {
                 init: function () {
@@ -103,32 +129,17 @@
                 }
             });
 
-            // Updated hoverable component to use new physics events
+            // Updated hoverable component
             AFRAME.registerComponent('hoverable', {
                 init: function () {
                     var el = this.el;
                     el.originalColor = el.getAttribute('material').color;
-
-                    el.addEventListener('hover-start', function () {
-                        el.setAttribute('color', '#ffff00'); // Yellow for hover
-                    });
-
-                    el.addEventListener('hover-end', function () {
-                        if (!el.is('grabbed')) {
-                            el.setAttribute('color', el.originalColor);
-                        }
-                    });
-
-                    el.addEventListener('grab-start', function () {
-                        el.setAttribute('color', '#ff0000'); // Red for grab
-                    });
-
+                    el.addEventListener('hover-start', function () { el.setAttribute('color', '#ffff00'); });
+                    el.addEventListener('hover-end', function () { if (!el.is('grabbed')) { el.setAttribute('color', el.originalColor); } });
+                    el.addEventListener('grab-start', function () { el.setAttribute('color', '#ff0000'); });
                     el.addEventListener('grab-end', function () {
-                        if (el.is('hovered')) {
-                            el.setAttribute('color', '#ffff00');
-                        } else {
-                            el.setAttribute('color', el.originalColor);
-                        }
+                        if (el.is('hovered')) { el.setAttribute('color', '#ffff00'); } 
+                        else { el.setAttribute('color', el.originalColor); }
                     });
                 }
             });
@@ -138,10 +149,13 @@
     <div class="info">
         <strong>Controls:</strong><br>
         The workstation is directly in front of you.<br><br>
-        <strong>VR:</strong> Squeeze Grip to activate hand physics, then use Trigger/Grip to grab. Left Thumbstick moves, Right Thumbstick turns.<br>
+        <strong>VR:</strong><br>
+         - <strong>Grab:</strong> Reach out and use Trigger/Grip buttons.<br>
+         - <strong>Move:</strong> Use the Left Thumbstick.<br>
+         - <strong>Turn:</strong> Use the Right Thumbstick.<br><br>
         <strong>Desktop:</strong> WASD to move, Mouse to look.
         <br><br>
-        <strong>Goal:</strong> Pick up components and place them in the PC case!
+        <strong>Goal:</strong> Pick up components and place them in the PC case! Dropped parts will respawn if they fall.
     </div>
 </body>
 </html>
